# internal/modules/reminder/router.go
@@ -9,13 +9,15 @@ import (
 type Handler struct {
 	fx.In
 
-	GuardLogin         gin.HandlerFunc `name:"guard_login"`
-	MyRemindersHandler *handler.MyRemindersHandler
-	NewReminderHandler *handler.NewReminderHandler
+	GuardLogin             gin.HandlerFunc `name:"guard_login"`
+	MyRemindersHandler     *handler.MyRemindersHandler
+	NewReminderHandler     *handler.NewReminderHandler
+	DeleteRemindersHandler *handler.DeleteRemindersHandler
 }
 
 func RegisterRoutes(engine *gin.Engine, h Handler) {
 	group := engine.Group("/reminder")
 	group.GET("/", h.GuardLogin, h.MyRemindersHandler.MyReminders)
 	group.POST("/", h.GuardLogin, h.NewReminderHandler.NewReminder)
+	group.DELETE("/:id", h.GuardLogin, h.DeleteRemindersHandler.DeleteReminder)
 }
